[build-system]
# Minimum requirements for the build system to execute.
requires = ["setuptools>=42", "wheel"]  # PEP 508 specifications.
build-backend = "setuptools.build_meta"

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py36, py37, py38, py39, lint

[testenv]
deps = pytest >= 3.0.0
commands = pytest

[testenv:lint]
deps = flake8
commands = flake8 pello
"""
